# AgentTel

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  TRADEMARK.md  attributes.json  build.gradle.kts  gradle.properties  mkdocs.yml  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
agenttel-agent/: build.gradle.kts
agenttel-agentic/: build.gradle.kts
agenttel-api/: build.gradle.kts
agenttel-cli/: pyproject.toml
agenttel-cli/src/agenttel_cli/: __main__.py
agenttel-cli/src/agenttel_cli/analyze/: config_generator.py  dependency_detector.py  endpoint_detector.py  scanner.py
agenttel-cli/src/agenttel_cli/baseline/: mcp_baseline_client.py
agenttel-cli/src/agenttel_cli/validate/: gap_detector.py  validator.py
agenttel-core/: build.gradle.kts
agenttel-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
agenttel-go/: go.mod  (+5 more)
agenttel-instrument/: Dockerfile  instrument.yml  pyproject.toml
agenttel-instrument/src/agenttel_instrument/: __main__.py
agenttel-instrument/src/agenttel_instrument/analyze/: __init__.py  config_generator.py  dependency_detector.py  endpoint_detector.py  scanner.py
agenttel-instrument/src/agenttel_instrument/config/: config.py  types.py
agenttel-instrument/src/agenttel_instrument/feedback/: applier.py  engine.py  models.py
agenttel-instrument/src/agenttel_instrument/mcp/: models.py  server.py
agenttel-instrument/src/agenttel_instrument/tools/: analyze_codebase.py  apply_improvements.py  apply_single.py  instrument_backend.py  instrument_frontend.py  suggest.py  validate.py
agenttel-instrument/src/agenttel_instrument/validate/: __init__.py  gap_detector.py  validator.py
agenttel-monitor/: Dockerfile  monitor.yml  pyproject.toml
agenttel-monitor/src/agenttel_monitor/: __main__.py
agenttel-monitor/src/agenttel_monitor/config/: config.py  types.py
agenttel-monitor/src/agenttel_monitor/llm/: anthropic_provider.py  prompts.py  provider.py
agenttel-monitor/src/agenttel_monitor/loop/: actor.py  improver.py  investigator.py  learner.py  orchestrator.py  reasoner.py  verifier.py  watcher.py
agenttel-monitor/src/agenttel_monitor/mcp/: client.py  models.py
agenttel-monitor/src/agenttel_monitor/notifications/: webhook.py
agenttel-monitor/src/agenttel_monitor/tracing/: monitor_tracer.py
agenttel-python/: README.md  pyproject.toml
agenttel-python/src/agenttel/: __init__.py  agentic_attributes.py  attributes.py  config.py  engine.py  enums.py  events.py  models.py  processor.py
agenttel-python/src/agenttel/agent/: __init__.py  auth.py  context.py  health.py  identity.py  incident.py  mcp_server.py  remediation.py  reporting.py
agenttel-python/src/agenttel/agentic/: __init__.py  cost.py  guardrail.py  orchestration.py  quality.py  scopes.py  tracer.py
agenttel-python/src/agenttel/anomaly/: __init__.py  detector.py  patterns.py
agenttel-python/src/agenttel/baseline/: __init__.py  composite.py  provider.py  rolling.py
agenttel-python/src/agenttel/causality/: __init__.py  tracker.py
agenttel-python/src/agenttel/error/: __init__.py  classifier.py
agenttel-python/src/agenttel/fastapi/: __init__.py  config.py  decorators.py  middleware.py
agenttel-python/src/agenttel/genai/: __init__.py  anthropic.py  attributes.py  bedrock.py  cost.py  langchain.py  openai.py  span_builder.py
agenttel-python/src/agenttel/slo/: __init__.py  tracker.py
agenttel-python/src/agenttel/topology/: __init__.py  registry.py
agenttel-python/tests/: conftest.py  test_agent.py  test_agentic.py  test_anomaly.py  test_attributes.py  test_baseline.py  test_fastapi.py  test_genai.py  test_genai_anthropic.py  test_genai_openai.py  test_mcp_server.py  test_processor.py  test_slo.py  test_topology.py
(+565 files in other folders)
